# cam-reverse.py

./: .gitignore  CLAUDE.md  PYTHON.md  README.md  cam-reverse.py  pyproject.toml
cam_reverse/: __init__.py  capture_single.py  cli.py  crypto.py  datatypes.py  dataview.py  discovery.py  event_emitter.py  exif.py  handlers.py  http_server.py  impl.py  logger.py  mock_server.py  pair.py  session.py  settings.py  utils.py  version.py
cam_reverse/assets/: app.js  asd.html  config.html  index.html  logs.html  style.css
contrib/: cam-reverse.service
tests_py/: test_fn.py  test_integration.py
