[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cam-reverse"
version = "0.1.0"
description = "Re-implementation of the iLnk/iLnkP2P/PPPP protocol used on cheap IP cameras (X5/A9)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
cam-reverse = "cam_reverse.cli:main"

[tool.setuptools]
packages = ["cam_reverse"]

[tool.setuptools.package-data]
cam_reverse = ["assets/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests_py"]
